Some styles added

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,3 +1,73 @@
-.post-item{
-	background: gray;
+.all-posts-screen {
+  width: 50%;
+  margin: 0px auto;
+  padding: 20px 0px;
+}
+.profile-data {
+  display: flex;
+  align-items: center;
+}
+.profile-pic {
+  border-radius: 50%;
+}
+.box-text-profile {
+  padding-left: 10px;
+}
+.text-profile {
+  margin: 0;
+  padding-left: 5px;
+  text-decoration: underline;
+  color: #d23669;
+}
+.each-title-posts {
+  color: #d23669;
+  font-weight: bolder;
+}
+.post-item {
+  padding: 20px 0px;
+}
+
+/* post screen */
+.title-screen-post {
+  color: rgb(255, 167, 196);
+  font-weight: 900;
+  transition: 0.2s;
+}
+.title-screen-post:hover {
+  color: rgb(253, 102, 152);
+}
+.each-title-post {
+  font-size: 45px;
+  font-weight: 1000;
+}
+.body-post {
+  white-space: pre-line;
+  text-align: justify;
+}
+.info-text {
+  background-color: rgba(255, 200, 200, 0.132);
+  padding: 3px;
+  margin: 0px;
+}
+
+.table-box {
+  width: 100%;
+  border: 1px solid white;
+}
+.td-one {
+  width: 30%;
+  border-bottom: 1px solid white;
+}
+.td-tow {
+  width: 70%;
+  border-left: 1px dashed white;
+  padding-left: 10px;
+  border-bottom: 1px solid white;
+}
+.tag-box {
+  display: flex;
+  padding: 30px 0px;
+}
+.tag-link {
+  padding: 0px 10px;
 }
