--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,17 +10,60 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+ul,
+li {
+  list-style: none;
+}
 * {
   box-sizing: border-box;
 }
+.link-text {
+  text-decoration: underline;
+  color: #d23669;
+}
+.line {
+  border-bottom: 1px solid gray;
+  padding-bottom: 40px;
+}
+.box-loading {
+  padding: 50px 0px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading {
+  width: 60px;
+  height: 60px;
+  border-top: 7px solid #d23669;
+  border-right: 07px solid white;
+  border-left: 07px solid white;
+  border-radius: 50%;
+  animation: loading 0.6s infinite;
+}
+.code-box {
+  background-color: #27292a;
+  width: 100%;
+  padding: 30px;
+  border-radius: 15px;
+  color: white;
+}
 
 @media (prefers-color-scheme: dark) {
-  html {
+  :root {
     color-scheme: dark;
   }
   body {
     color: white;
     background: black;
+  }
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
